--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@ a:hover{
   display: none;
 }
 
+.line{
+  height: 1PX;
+  width: auto;
+  background-color: #0954b8;
+}
+
 /* media queries for main page */
 
 @media (max-height: 400px) {
@@ -108,7 +114,7 @@ a:hover{
 /* prompt 1 */
 
 .prompt-1 {
-  width: 30vw;
+  width: auto;
 }
 
 .prompt-1 > input[type=text]{
@@ -132,11 +138,11 @@ a:hover{
 }
 
 .prompt-1 > #list{
-  width: 100%;
-  max-width: 200px;
+  width: auto;
   min-width: 80px;
   border: solid 1px #90959a;
   min-height: 300px;
+  margin-top: 12px;
 }
 
 .prompt-1 > #list > div {
@@ -162,6 +168,7 @@ a:hover{
   box-shadow: 3px 3px 10px #3333;
   position: absolute;
   cursor: grab;
+  display: none;
 }
 
 .dialogue-button{
@@ -262,12 +269,15 @@ a:hover{
 
 #precounter{
   height: 25vh;
-  width:auto;
+  width: 100%;
   background-color: #3333;
   display: grid;
   place-items: center;
   font-size: 10vh;
   margin: 24px auto 24px auto;
+  border: none;
+  text-align: center;
+  overflow-y: hidden;
 }
 
 
