--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ a:hover{
   height: 1PX;
   width: auto;
   background-color: #0954b8;
+  margin-top: 24;
+  margin-bottom: 24;
+  grid-column: 2;
 }
 
 /* media queries for main page */
@@ -167,7 +170,6 @@ a:hover{
   border-radius: 1px;
   box-shadow: 3px 3px 10px #3333;
   position: absolute;
-  cursor: grab;
   display: none;
 }
 
@@ -195,8 +197,14 @@ a:hover{
   max-width: 330px;
 }
 
-.dialogue-box > h3 {
+#dialogue-header > h3 {
   color: #0954b8;
+  padding-left: 20px;
+  background-color: inherit;
+}
+
+#old-version{
+  display: none;
 }
 
 .button-holder{
@@ -240,7 +248,8 @@ a:hover{
   display: inline;
 }
 
-.exit-container{
+#dialogue-header{
+  background-color: white;
   position: absolute;
   display: grid;
   justify-content: space-between;
@@ -249,6 +258,7 @@ a:hover{
   max-width: 370px;
   justify-items: end;
   margin: auto;
+  cursor: grab;
 }
 
 .exit-button{
@@ -275,6 +285,19 @@ a:hover{
   place-items: center;
   font-size: 10vh;
   margin: 24px auto 24px auto;
+  border: none;
+  text-align: center;
+  overflow-y: hidden;
+}
+
+#dialog-message{
+  font-weight: 600;
+  height: 25vh;
+  width: 100%;
+  display: grid;
+  place-items: center;
+  font-size: 15px;
+  margin: 30px auto 18px auto;
   border: none;
   text-align: center;
   overflow-y: hidden;
