--- a/style.css
+++ b/style.css
@@ -113,23 +113,23 @@ a:hover{
 /* prompt 1 */
 
 .prompt-1 {
-  width: 30vw;
   min-width: 300px;
 }
 
 .head-1-cont{
-  display: grid;
   width: 100%;
+  display: grid;
   grid-template-columns: auto auto;
   column-gap: 5px;
 }
 
 .prompt-1 > .head-1-cont > input[type=text]{
+  display: flex;
   border: solid 1px #90959a;
   padding: 7px;
   border-radius: 1px;
   max-height: max-content;
-  columns: 4;
+  width: auto;
 }
 
 #add-btn-1{
@@ -140,20 +140,18 @@ a:hover{
   font-weight: bold;
   /* font-size: 20px; */
   border-radius: 2px;
+  max-width: auto;
 }
 #add-btn:hover{
   background-color: #3984e8;
 }
 
 .prompt-1 > #list{
-  width: 100%;
   width: auto;
   min-width: 80px;
   border: solid 1px #90959a;
   min-height: 300px;
   margin-top: 6px;
-  max-height: 50vh;
-  overflow-y: auto;
 }
 
 .prompt-1 > #list > div {
@@ -167,7 +165,6 @@ a:hover{
 .prompt-1 > #list > div > button {
   border: none;
 }
-
 
 
 /* second prompt */
